quick alignment fix

--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -109,7 +109,7 @@
     padding-bottom: 15rem;
     transform: translateY(-24rem) skewY(1deg);
     min-height: 101vh;
-    box-shadow: variables.$box-shadow;
+    box-shadow: variables.$box-shadow-dark;
     z-index: 40;
     background-image:
       linear-gradient(to bottom right,
